--- a/home.html
+++ b/home.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Home page for pokemart shop">
+    <meta name="description" content="Home page for PokeShop">
     <meta name="author" content="Giancarlo Sanz">
-    <title>PokéShop</title>
+    <title>PokéShop - Home</title>
 </head>
 <body>
     <div id="wrapper">
@@ -20,9 +20,9 @@
                     <nav id="myScrollspy" class="sidebar sidebar-nav">
                         <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
                         <a class="active" href="./home.html">Home</a>
-                        <a href="#products">Products</a>
-                        <a data-toggle="modal" href="#loginModal">Account</a>
-                        <a href="#about">About Us</a>
+                        <a href="./products.html">Products</a>
+                        <a data-toggle="modal" href="#loginModal"><!--href="account.html"-->Account</a>
+                        <a href="./about.html">About Us</a>
                         <div class="search-container">
                             <form action="#doSearch"></form>
                         </div>
@@ -41,10 +41,9 @@
                             <div class="modal-header">
                                 <h5 class="modal-title" id="modalTitle">Sign In</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="text-white">&times;</span></button>
-                                </button>
                             </div>
                             <div class="modal-body">
-                                <form>
+                                <form action="#login">
                                     <div class="form-group">
                                         <label for="username" class="col-form-label">Username:</label>
                                         <input type="text" class="form-control" id="username">
@@ -54,12 +53,11 @@
                                         <input type="text" class="form-control" id="password">
                                         <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
                                     </div>
+                                    <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
+                                    <button type="submit" class="btn btn-primary float-right">Login</button>
                                 </form>
                             </div>
-                            <div class="modal-footer">
-                                <a href="#createaccount" role="link"><span class="point">Create Account</span></a>
-                                <button type="button" class="btn btn-primary align-text-top">Login</button>
-                            </div>
+
                         </div>
                     </div>
                 </div>
