--- a/products.html
+++ b/products.html
@@ -64,10 +64,54 @@
 
             <!-- Page Content -->
             <div class="col-lg-10 h-100 col-sm-9 col-12">
-                <div id="page-header" class="alert-heading">
-                    <h1 class="text-center font-weight-bold" aria-label="Welcome to the PokeShop!">Welcome to the PokeShop!</h1>
+                <div id="page-header" class="pt-5 pl-3 pb-3 pr-2">
+                    <h1 class="font-weight-bold" aria-label="Products">Products</h1>
                 </div>
                 <div class="h-auto">
+                    <!-- Item Row must always have 5+ cards-->
+                    <div class="card-deck container-fluid pb-2">
+                        <!-- Item -->
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="./media/pokeball.png" width="400">
+                            <div class="card-body">
+                                <a href="#producturl"><h5 class="text-center card-title">Product Name</h5></a>
+                                <p class="card-text">Product Description</p>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="button" class="btn btn-info" aria-label="View product" onclick="addToCart()">Add to Cart</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                    </div>
+                    <!-- Item Row must always have 5+ cards-->
+                    <div class="card-deck container-fluid pb-2">
+                        <!-- Item -->
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="./media/pokeball.png" width="400">
+                            <div class="card-body">
+                                <a href="#producturl"><h5 class="text-center card-title">Product Name</h5></a>
+                                <p class="card-text">Product Description</p>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="button" class="btn btn-info" aria-label="View product" onclick="addToCart()">Add to Cart</button>
+                            </div>
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                        <div class="card">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
