viewproduct.html designed not very functional but looks good.

--- a/createaccount.html
+++ b/createaccount.html
@@ -68,6 +68,7 @@
                     <h2 class="font-weight-bold pl-5 pt-5" aria-label="Create Account">Create Account</h2>
                 </div>
                 <div class="h-auto p-5">
+                    <form method="post" action="#createAccount">
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="firstname">First Name:</label>
