viewproduct.html designed not very functional but looks good.

--- a/viewproduct.html
+++ b/viewproduct.html
@@ -95,6 +95,7 @@
                                 <button type="submit" id="btnCheckout" class="btn btn-info btn-block"><i class="fas fa-plus"></i> Add To Cart</button>
                             </form>
                             <h4 class="text-right">Price: <span class="text-danger">$999.00</span></h4>
+                            <h5 class="text-right">Estimated Delivery Date: MM/DD/YYYY</h5>
                         </div>
                     </div>
                     <div class="card-deck">
