--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,57 @@
     <title>Title</title>
 </head>
 <body>
+<div id="wrapper">
+    <div class="container-fluid h-100">
+        <div class="row h-100">
+            <!-- Sidebar -->
+            <div class="col-lg-2 h-100 col-sm-3 col-12">
+                <nav id="myScrollspy" class="sidebar sidebar-nav">
+                    <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
+                    <a class="active" href="./home.html">Home</a>
+                    <a href="#products">Products</a>
+                    <a data-toggle="modal" href="#loginModal">Account</a>
+                    <a href="#about">About Us</a>
+                    <div class="search-container">
+                        <form action="#doSearch"></form>
+                    </div>
 
+                    <!-- Footer -->
+                    <div class="text-white text-center">
+                        <p><i class="far fa-copyright"></i> 2017 Wonder Rangers</p>
+                    </div>
+                </nav>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" tabindex="-1" id="loginModal" role="dialog" aria-labelledby="loginModalCenter" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalTitle">Sign In</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="text-white">&times;</span></button>
+                        </div>
+                        <div class="modal-body">
+                            <form action="#login">
+                                <div class="form-group">
+                                    <label for="email" class="col-form-label">Username:</label>
+                                    <input type="text" class="form-control" id="email" name="email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="password" class="col-form-label">Password:</label>
+                                    <input type="text" class="form-control" id="password" name="password">
+                                    <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
+                                </div>
+                                <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
+                                <button type="submit" class="btn btn-primary float-right">Login</button>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
