--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
                     <nav id="myScrollspy" class="sidebar sidebar-nav">
                         <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
                         <a class="active" href="./home.html">Home</a>
-                        <a href="./products.html">Products</a>
-                        <a data-toggle="modal" href="#loginModal"><!--href="account.html"-->Account</a>
-                        <a href="./about.html">About Us</a>
+                        <a href="#products">Products</a>
+                        <a data-toggle="modal" href="#loginModal">Account</a>
+                        <a href="#about">About Us</a>
                         <div class="search-container">
                             <form action="#doSearch"></form>
                         </div>
@@ -45,12 +45,12 @@
                             <div class="modal-body">
                                 <form action="#login">
                                     <div class="form-group">
-                                        <label for="username" class="col-form-label">Username:</label>
-                                        <input type="text" class="form-control" id="username">
+                                        <label for="email" class="col-form-label">Username:</label>
+                                        <input type="text" class="form-control" id="email" name="email">
                                     </div>
                                     <div class="form-group">
                                         <label for="password" class="col-form-label">Password:</label>
-                                        <input type="text" class="form-control" id="password">
+                                        <input type="text" class="form-control" id="password" name="password">
                                         <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
                                     </div>
                                     <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
