--- a/viewproduct.html
+++ b/viewproduct.html
@@ -45,12 +45,12 @@
                         <div class="modal-body">
                             <form action="#login">
                                 <div class="form-group">
-                                    <label for="username" class="col-form-label">Username:</label>
-                                    <input type="text" class="form-control" id="username">
+                                    <label for="email" class="col-form-label">Username:</label>
+                                    <input type="text" class="form-control" id="email" name="email">
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="col-form-label">Password:</label>
-                                    <input type="text" class="form-control" id="password">
+                                    <input type="text" class="form-control" id="password" name="password">
                                     <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
                                 </div>
                                 <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
