--- a/createaccount.html
+++ b/createaccount.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class='form-group col-md-4'>
                                 <label for='state'>State</label>
-                                <select id='state' class='form-control'>
+                                <select id='state' name="state" class='form-control'>
                                     <option value=''>Choose...</option>
                                     <option value='AK'>Alaska</option>
                                     <option value='AL'>Alabama</option>
