--- a/cart.html
+++ b/cart.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-    <link rel='stylesheet' type='text/css' href='css/bootstrap.css'>
-    <link rel='stylesheet' type='text/css' href='css/all.css'>
-    <link rel='stylesheet' type='text/css' href='css/sheet.css'>
-    <meta charset='UTF-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <meta name='description' content='PokeShop'>
-    <meta name='author' content='Giancarlo Sanz'>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/all.css">
+    <link rel="stylesheet" type="text/css" href="css/sheet.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="PokeShop">
+    <meta name="author" content="Giancarlo Sanz">
     <title>PokéShop - Cart</title>
 </head>
 <body>
-<div id='wrapper'>
-    <div class='container-fluid h-100'>
-        <div class='row h-100'>
+<div id="wrapper">
+    <div class="container-fluid h-100">
+        <div class="row h-100">
             <!-- Sidebar -->
-            <div class='col-lg-2 h-100 col-sm-3 col-12'>
-                <nav id='myScrollspy' class='sidebar sidebar-nav'>
-                    <img class='img-fluid' src='./media/pokeshop.png' alt='Pokémart Logo' width='325' height='auto'>
-                    <a class='active' href='./home.html'>Home</a>
-                    <a href='./products.html'>Products</a>
-                    <a data-toggle='modal' href='#loginModal'>Account</a>
-                    <a href='./about.html'>About Us</a>
-                    <div class='search-container'>
-                        <form action='#doSearch'></form>
+            <div class="col-lg-2 h-100 col-sm-3 col-12">
+                <nav id="myScrollspy" class="sidebar sidebar-nav">
+                    <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
+                    <a class="active" href="./home.php">Home</a>
+                    <a href="#products">Products</a>
+                    <a data-toggle="modal" href="#loginModal">Account</a>
+                    <a href="#about">About Us</a>
+                    <div class="search-container">
+                        <form action="#doSearch"></form>
                     </div>
 
                     <!-- Footer -->
-                    <div class='text-white text-center'>
-                        <p><i class='far fa-copyright'></i> 2017 Wonder Rangers</p>
+                    <div class="text-white text-center">
+                        <p><i class="far fa-copyright"></i> 2017 Wonder Rangers</p>
                     </div>
                 </nav>
             </div>
 
             <!-- Modal -->
-            <div class='modal fade' tabindex='-1' id='loginModal' role='dialog' aria-labelledby='loginModalCenter' aria-hidden='true'>
-                <div class='modal-dialog modal-dialog-centered' role='document'>
-                    <div class='modal-content'>
-                        <div class='modal-header'>
-                            <h5 class='modal-title' id='modalTitle'>Sign In</h5>
-                            <button type='button' class='close' data-dismiss='modal' aria-label='Close'><span aria-hidden='true' class='text-white'>&times;</span></button>
+            <div class="modal fade" tabindex="-1" id="loginModal" role="dialog" aria-labelledby="loginModalCenter" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="modalTitle">Sign In</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="text-white">&times;</span></button>
                         </div>
-                        <div class='modal-body'>
-                            <form action='#login'>
-                                <div class='form-group'>
-                                    <label for='email' class='col-form-label'>Username:</label>
-                                    <input type='text' class='form-control' id='email' name='email'>
+                        <div class="modal-body">
+                            <form action="#login">
+                                <div class="form-group">
+                                    <label for="username" class="col-form-label">Username:</label>
+                                    <input type="text" class="form-control" id="username">
                                 </div>
-                                <div class='form-group'>
-                                    <label for='password' class='col-form-label'>Password:</label>
-                                    <input type='text' class='form-control' id='password' name='password'>
-                                    <a href='#forgotpassword' role='link'><span class='point'>Forgot Password?</span></a>
+                                <div class="form-group">
+                                    <label for="password" class="col-form-label">Password:</label>
+                                    <input type="text" class="form-control" id="password">
+                                    <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
                                 </div>
-                                <a href='./createaccount.html' role='link'><span class='point'>Create Account</span></a>
-                                <button type='submit' class='btn btn-primary float-right'>Login</button>
+                                <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
+                                <button type="submit" class="btn btn-primary float-right">Login</button>
                             </form>
                         </div>
 
@@ -63,49 +63,49 @@
             </div>
 
             <!-- Page Content -->
-            <div class='col-lg-10 h-100 col-sm-9 col-12'>
-                <div id='page-header' class='alert-heading'>
-                    <h2 class='font-weight-bold pl-5 pt-5' aria-label='Your Cart'>Your Cart</h2>
+            <div class="col-lg-10 h-100 col-sm-9 col-12">
+                <div id="page-header" class="alert-heading">
+                    <h2 class="font-weight-bold pl-5 pt-5" aria-label="Your Cart">Your Cart</h2>
                 </div>
-                <div class='h-auto list-group' id='itemList'>
+                <div class="h-auto list-group" id="itemList">
                     <!-- Item -->
-                    <div id='item1' class='card w-100 container-fluid'>
-                        <div class='row'>
-                            <div class='card-body col-md-8'>
-                                <img src='media/pokeball.png' class='float-left' height='200'>
-                                <h5 class='card-title'>Item 1</h5>
+                    <div id="item1" class="card w-100 container-fluid">
+                        <div class="row">
+                            <div class="card-body col-md-8">
+                                <img src="media/pokeball.png" class="float-left" height="200">
+                                <h5 class="card-title">Item 1</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, magni.</p>
                             </div>
-                            <div class='card-body col-md-4'>
+                            <div class="card-body col-md-4">
                                 <p>Price: <br>Qty:</p>
-                                <button type='button' class='btn btn-danger' id='btnRemove1' onclick='removeItem(this)'><i class='fas fa-trash'></i> Remove</button>
+                                <button type="button" class="btn btn-danger" id="btnRemove1" onclick="removeItem(this)"><i class="fas fa-trash"></i> Remove</button>
                             </div>
                         </div>
                     </div>
                     <!-- Item -->
-                    <div id='item2' class='card w-100 container-fluid'>
-                        <div class='row'>
-                            <div class='card-body col-md-8'>
-                                <img src='media/pokeball.png' class='float-left' height='200'>
-                                <h5 class='card-title'>Item 2</h5>
+                    <div id="item2" class="card w-100 container-fluid">
+                        <div class="row">
+                            <div class="card-body col-md-8">
+                                <img src="media/pokeball.png" class="float-left" height="200">
+                                <h5 class="card-title">Item 2</h5>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, magni.</p>
                             </div>
-                            <div class='card-body col-md-4'>
+                            <div class="card-body col-md-4">
                                 <p>Price: <br>Qty:</p>
-                                <button type='button' class='btn btn-danger' id='btnRemove2' onclick='removeItem(this)'><i class='fas fa-trash'></i> Remove</button>
+                                <button type="button" class="btn btn-danger" id="btnRemove2" onclick="removeItem(this)"><i class="fas fa-trash"></i> Remove</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button type='button' id='btnCheckout' class='btn btn-primary btn-lg float-right' onclick='checkout()'><i class='fas fa-shopping-cart'></i> Checkout</button>
+                <button type="button" id="btnCheckout" class="btn btn-primary btn-lg float-right" onclick="checkout()"><i class="fas fa-shopping-cart"></i> Checkout</button>
             </div>
         </div>
     </div>
 </div>
 
-<script src='js/functionality.js'></script>
-<script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js' integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49' crossorigin='anonymous'></script>
-<script src='js/bootstrap.js'></script>
+<script src="js/functionality.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
