Added search bar to sidebar

--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -19,13 +19,14 @@
             <div class="col-lg-2 h-100 col-sm-3 col-12">
                 <nav id="myScrollspy" class="sidebar sidebar-nav">
                     <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
+                    <form action="#doSearch" method='get' class='form-inline'>
+                        <input type='search' class='form-control ml-1' placeholder='Search...' id='searchItem' name='searchItem'>
+                        <button class="btn btn-primary mx-1" type="submit">Search</button>
+                    </form>
                     <a class="active" href="./home.php">Home</a>
                     <a href="#products">Products</a>
                     <a data-toggle="modal" href="#loginModal">Account</a>
                     <a href="#about">About Us</a>
-                    <div class="search-container">
-                        <form action="#doSearch"></form>
-                    </div>
 
                     <!-- Footer -->
                     <div class="text-white text-center">
