--- a/viewproduct.html
+++ b/viewproduct.html
@@ -20,9 +20,9 @@
                 <nav id="myScrollspy" class="sidebar sidebar-nav">
                     <img class="img-fluid" src="./media/pokeshop.png" alt="Pokémart Logo" width="325" height="auto">
                     <a class="active" href="./home.php">Home</a>
-                    <a href="products.php">Products</a>
-                    <a href="login.php">Account</a>
-                    <a href="about.php">About Us</a>
+                    <a href="#products">Products</a>
+                    <a data-toggle="modal" href="#loginModal">Account</a>
+                    <a href="#about">About Us</a>
                     <div class="search-container">
                         <form action="#doSearch"></form>
                     </div>
@@ -43,7 +43,7 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="text-white">&times;</span></button>
                         </div>
                         <div class="modal-body">
-                            <form action="login.php">
+                            <form action="#login">
                                 <div class="form-group">
                                     <label for="username" class="col-form-label">Username:</label>
                                     <input type="text" class="form-control" id="username">
@@ -53,7 +53,7 @@
                                     <input type="text" class="form-control" id="password">
                                     <a href="#forgotpassword" role="link"><span class="point">Forgot Password?</span></a>
                                 </div>
-                                <a href="createaccount.php" role="link"><span class="point">Create Account</span></a>
+                                <a href="./createaccount.html" role="link"><span class="point">Create Account</span></a>
                                 <button type="submit" class="btn btn-primary float-right">Login</button>
                             </form>
                         </div>
@@ -64,35 +64,18 @@
 
             <!-- Page Content -->
             <div class="col-lg-10 h-100 col-sm-9 col-12">
-            <div class='position-absolute' style='z-index:1200; @include float-right;'>
-                <a class='btn btn-primary' id='cartButton' href='./cart.php'><i class='fas fa-shopping-cart'></i></a>
-            </div>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="img-fluid p-5 col">
                             <img src="./images/pokemon%20pngs/charmanderFull.png" height="600" width="600" class="img-fluid">
                         </div>
                         <div class="col px-4 pt-5">
-                            <h2 class="font-weight-bold" aria-label="Product Name">Charmander</h2>
-                            <h5>Types: </h5><a>Fire</a>
+                            <h2 class="font-weight-bold" aria-label="Product Name">Product Name</h2>
+                            <h5>Types: </h5><a>Fire, Something else</a>
                             <br><br>
                             <h6>Pokemon Description:</h6>
-                            <p class="my-3">The flame that burns at the tip of its tail is an indication of its emotions. The flame wavers when Charmander is enjoying itself. If the Pokemon becomes enraged, the flame burns fiercely.</p>
-
-<p>Height: 2' 00"</p>
-
-<p>Weight: 18.7 lbs</p>
-
-<p>Gender: male/female</p>
-
-<p>Category: Lizard</p>
-
-<p>Abilities: Blaze</p>
-
-<p>Type: Fire</p>
-
-<p>Weaknesses: Ground, Rock, Water</p>
-                            <form method="post" action="cart.php">
+                            <p class="my-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit id illo neque quam reiciendis, rerum ut vero? Eius minus praesentium reprehenderit. Aperiam asperiores aut autem commodi, ducimus fuga laudantium magnam mollitia necessitatibus, nemo numquam possimus praesentium repellat sed similique! Ab aliquam consectetur cum cumque cupiditate eos expedita fugit id illum inventore laborum magni nihil non qui ratione, repellendus ullam veritatis.</p>
+                            <form method="post" action="#addToCart">
                                 <div class="form-inline justify-content-end my-2">
                                     <label class="" for="itemQuantity"><h5>Qty: </h5></label>
                                     <select class="custom-select" name="itemQuantity" id="itemQuantity">
@@ -111,11 +94,10 @@
                                 </div>
                                 <button type="submit" id="btnCheckout" class="btn btn-info btn-block"><i class="fas fa-plus"></i> Add To Cart</button>
                             </form>
-                            <h4 class="text-right">Price: <span class="text-danger">$20.00</span></h4>
-                            <h5 class="text-right">Estimated Delivery Date: 07/27/2018</h5>
+                            <h4 class="text-right">Price: <span class="text-danger">$999.00</span></h4>
+                            <h5 class="text-right">Estimated Delivery Date: MM/DD/YYYY</h5>
                         </div>
                     </div>
-		    <!--
                     <div class="card-deck">
                         <div class="card">
                             <div class="card-body">
@@ -137,7 +119,6 @@
 
                         </div>
                     </div>
-		    -->
                 </div>
             </div>
         </div>
